@@ -209,6 +209,8 @@ class TclTest(unittest.TestCase):
             (('a', 3.4), ('a', 3.4)),
             ((), ()),
             (call('list', 1, '2', (3.4,)), (1, '2', (3.4,))),
+            (call('dict', 'create', 1, u'\u20ac', '\xe2\x82\xac', (3.4,)),
+                    (1, u'\u20ac', u'\u20ac', (3.4,))),
         ]
         for arg, res in testcases:
             self.assertEqual(splitlist(arg), res)
@@ -241,6 +243,8 @@ class TclTest(unittest.TestCase):
             (('a', (2, 3.4)), ('a', (2, 3.4))),
             ((), ()),
             (call('list', 1, '2', (3.4,)), (1, '2', (3.4,))),
+            (call('dict', 'create', 12, u'\u20ac', '\xe2\x82\xac', (3.4,)),
+                    (12, u'\u20ac', u'\u20ac', (3.4,))),
         ]
         for arg, res in testcases:
             self.assertEqual(split(arg), res)
